Fix Section overflow, create grid for work

--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -20,8 +20,9 @@ time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	font-family: $font_source_sans;
+	font-family: $font_open_sans;
 	vertical-align: baseline;
+	transition: all ease 0.2s;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
@@ -30,6 +31,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	background-color: $color_gray;
 }
 ol, ul {
 	list-style: none;
@@ -45,4 +47,12 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+
+strong{
+	font-weight: bold;
+}
+
+.shide{
+	display: none;
 }
